eww: fix qmenu alignment

--- a/.config/sway/eww/shell/style/modes.scss
+++ b/.config/sway/eww/shell/style/modes.scss
@@ -28,8 +28,8 @@
 .mode-config {
     @extend .mode;
     color: $inv;
-    background-color: $orange;
-    &:hover { background-color: fade($orange); }
+    background-color: $yellow;
+    &:hover { background-color: fade($yellow); }
 }
 
 .mode-keys {
