--- a/.config/sway/eww/shell/style/panel.scss
+++ b/.config/sway/eww/shell/style/panel.scss
@@ -1,10 +1,3 @@
-.config-panel {
-    background-color: $bg0;
-    border-radius: 12px 0px 0px 12px;
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 6px;
-    margin: 8px 0px 8px 20px;
-}
-
 .battery-circle-critical { @extend .circle; color: $red; }
 .battery-circle-low { @extend .circle; color: $orange; }
 .battery-circle-medium { @extend .circle; color: $yellow; }
